--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@amap/amap-vue": "^2.0.13",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "swiper": "^4.5.1",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
